Mejoras en API, calendario, jugadores y estilos

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="styles/matches.css">
     <link rel="stylesheet" href="styles/pages.css">
     <link rel="stylesheet" href="styles/calendar-improved.css">
+    <link rel="stylesheet" href="styles/team-logos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
@@ -513,15 +514,22 @@
                 <!-- U7 Team Players -->
                 <div class="players-team active" id="team-u7">
                     <h3 class="team-players-title">U7 Team - Mini's</h3>
+                    <p class="team-players-subtitle">Geboren 2018-2019</p>
                     <div class="players-grid">
-                        <!-- Players will be added here when you provide photos and names -->
+                        <!-- Players will be loaded dynamically by JavaScript -->
                         <div class="player-card placeholder">
                             <div class="player-photo">
                                 <i class="fas fa-user"></i>
                             </div>
                             <div class="player-info">
-                                <h4>Speler Naam</h4>
-                                <p>Rugnummer: --</p>
+                                <h4 class="player-name">Speler Naam</h4>
+                                <div class="player-position">
+                                    <i class="fas fa-user"></i>
+                                    <span>Positie</span>
+                                </div>
+                                <div class="player-details">
+                                    <span class="player-age">-- jaar</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -530,14 +538,22 @@
                 <!-- U8 Team Players -->
                 <div class="players-team" id="team-u8">
                     <h3 class="team-players-title">U8 Team - Benjamins</h3>
+                    <p class="team-players-subtitle">Geboren 2017</p>
                     <div class="players-grid">
+                        <!-- Players will be loaded dynamically by JavaScript -->
                         <div class="player-card placeholder">
                             <div class="player-photo">
                                 <i class="fas fa-user"></i>
                             </div>
                             <div class="player-info">
-                                <h4>Speler Naam</h4>
-                                <p>Rugnummer: --</p>
+                                <h4 class="player-name">Speler Naam</h4>
+                                <div class="player-position">
+                                    <i class="fas fa-user"></i>
+                                    <span>Positie</span>
+                                </div>
+                                <div class="player-details">
+                                    <span class="player-age">-- jaar</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -546,14 +562,22 @@
                 <!-- U9 Team Players -->
                 <div class="players-team" id="team-u9">
                     <h3 class="team-players-title">U9 Team - Preminiemen</h3>
+                    <p class="team-players-subtitle">Geboren 2016</p>
                     <div class="players-grid">
+                        <!-- Players will be loaded dynamically by JavaScript -->
                         <div class="player-card placeholder">
                             <div class="player-photo">
                                 <i class="fas fa-user"></i>
                             </div>
                             <div class="player-info">
-                                <h4>Speler Naam</h4>
-                                <p>Rugnummer: --</p>
+                                <h4 class="player-name">Speler Naam</h4>
+                                <div class="player-position">
+                                    <i class="fas fa-user"></i>
+                                    <span>Positie</span>
+                                </div>
+                                <div class="player-details">
+                                    <span class="player-age">-- jaar</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -562,14 +586,22 @@
                 <!-- U10 Team Players -->
                 <div class="players-team" id="team-u10">
                     <h3 class="team-players-title">U10 Team - Miniemen</h3>
+                    <p class="team-players-subtitle">Geboren 2015</p>
                     <div class="players-grid">
+                        <!-- Players will be loaded dynamically by JavaScript -->
                         <div class="player-card placeholder">
                             <div class="player-photo">
                                 <i class="fas fa-user"></i>
                             </div>
                             <div class="player-info">
-                                <h4>Speler Naam</h4>
-                                <p>Rugnummer: --</p>
+                                <h4 class="player-name">Speler Naam</h4>
+                                <div class="player-position">
+                                    <i class="fas fa-user"></i>
+                                    <span>Positie</span>
+                                </div>
+                                <div class="player-details">
+                                    <span class="player-age">-- jaar</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -578,14 +610,22 @@
                 <!-- U13 Team Players -->
                 <div class="players-team" id="team-u13">
                     <h3 class="team-players-title">U13 Team - Pupillen</h3>
+                    <p class="team-players-subtitle">Geboren 2012-2013</p>
                     <div class="players-grid">
+                        <!-- Players will be loaded dynamically by JavaScript -->
                         <div class="player-card placeholder">
                             <div class="player-photo">
                                 <i class="fas fa-user"></i>
                             </div>
                             <div class="player-info">
-                                <h4>Speler Naam</h4>
-                                <p>Rugnummer: --</p>
+                                <h4 class="player-name">Speler Naam</h4>
+                                <div class="player-position">
+                                    <i class="fas fa-user"></i>
+                                    <span>Positie</span>
+                                </div>
+                                <div class="player-details">
+                                    <span class="player-age">-- jaar</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -594,14 +634,22 @@
                 <!-- U15 Team Players -->
                 <div class="players-team" id="team-u15">
                     <h3 class="team-players-title">U15 Team - Nieuw Team!</h3>
+                    <p class="team-players-subtitle">Geboren 2011-2013</p>
                     <div class="players-grid">
+                        <!-- Players will be loaded dynamically by JavaScript -->
                         <div class="player-card placeholder">
                             <div class="player-photo">
                                 <i class="fas fa-user"></i>
                             </div>
                             <div class="player-info">
-                                <h4>Speler Naam</h4>
-                                <p>Rugnummer: --</p>
+                                <h4 class="player-name">Speler Naam</h4>
+                                <div class="player-position">
+                                    <i class="fas fa-user"></i>
+                                    <span>Positie</span>
+                                </div>
+                                <div class="player-details">
+                                    <span class="player-age">-- jaar</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -732,14 +780,17 @@
             <div class="section-header">
                 <span class="section-tag">Kalender</span>
                 <h2 class="section-title">Komende Evenementen</h2>
-                <p class="section-description">Bekijk alle belangrijke data en evenementen</p>
+                <p class="section-description">4e Provinciale C West-Vlaanderen - Seizoen 2025/2026</p>
             </div>
             <!-- League Standings Table -->
             <div class="standings-section">
                 <h3 class="standings-title">
                     <i class="fas fa-trophy"></i>
-                    Competitie Stand
+                    Competitie Stand - 4e Provinciale C West-Vlaanderen
                 </h3>
+                <p style="text-align: center; color: var(--text-light); margin-bottom: 2rem; font-size: 0.9rem;">
+                    Seizoen 2025/2026 - Bijgewerkt op 8 december 2025
+                </p>
                 <div class="standings-table-wrapper">
                     <table class="standings-table">
                         <thead>
@@ -763,97 +814,31 @@
                 </div>
             </div>
 
-            <!-- Calendar Events -->
+            <!-- Past Matches Section -->
+            <div class="calendar-events-section">
+                <h3 class="calendar-events-title">
+                    <i class="fas fa-history"></i>
+                    Resultaten - Afgelopen Wedstrijden
+                </h3>
+                <p style="text-align: center; color: var(--text-light); margin-bottom: 2rem; font-size: 0.9rem;">
+                    Seizoen 2025/2026 - Laatste update: 7 december 2025
+                </p>
+                <div class="calendar-grid-modern" id="pastMatchesGrid">
+                    <!-- Will be populated by JavaScript -->
+                </div>
+            </div>
+
+            <!-- Upcoming Matches Section -->
             <div class="calendar-events-section">
                 <h3 class="calendar-events-title">
                     <i class="fas fa-calendar-alt"></i>
-                    Komende Evenementen
+                    Komende Wedstrijden
                 </h3>
-                <div class="calendar-grid-modern">
-                    <div class="calendar-card-modern">
-                        <div class="calendar-date-modern">
-                            <span class="date-day-modern">07</span>
-                            <span class="date-month-modern">DEC</span>
-                        </div>
-                        <div class="calendar-content-modern">
-                            <div class="event-type-badge match">Wedstrijd</div>
-                            <h3>Wedstrijd U13</h3>
-                            <div class="event-details">
-                                <p class="event-time"><i class="fas fa-clock"></i> 14:00 - 15:30</p>
-                                <p class="event-location"><i class="fas fa-home"></i> Thuis - Pol Dhondtstraat 70, 8380 Lissewege</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="calendar-card-modern">
-                        <div class="calendar-date-modern">
-                            <span class="date-day-modern">10</span>
-                            <span class="date-month-modern">DEC</span>
-                        </div>
-                        <div class="calendar-content-modern">
-                            <div class="event-type-badge training">Training</div>
-                            <h3>Training Alle Teams</h3>
-                            <div class="event-details">
-                                <p class="event-time"><i class="fas fa-clock"></i> 18:00 - 19:30</p>
-                                <p class="event-location"><i class="fas fa-map-marker-alt"></i> Pol Dhondtstraat 70, 8380 Lissewege</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="calendar-card-modern">
-                        <div class="calendar-date-modern">
-                            <span class="date-day-modern">14</span>
-                            <span class="date-month-modern">DEC</span>
-                        </div>
-                        <div class="calendar-content-modern">
-                            <div class="event-type-badge match">Wedstrijd</div>
-                            <h3>Wedstrijd U10</h3>
-                            <div class="event-details">
-                                <p class="event-time"><i class="fas fa-clock"></i> 10:00 - 11:00</p>
-                                <p class="event-location"><i class="fas fa-plane"></i> Uit - Tegenstander FC, Sportstraat 15, 8000 Brugge</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="calendar-card-modern">
-                        <div class="calendar-date-modern">
-                            <span class="date-day-modern">17</span>
-                            <span class="date-month-modern">DEC</span>
-                        </div>
-                        <div class="calendar-content-modern">
-                            <div class="event-type-badge event">Evenement</div>
-                            <h3>Clubavond</h3>
-                            <div class="event-details">
-                                <p class="event-time"><i class="fas fa-clock"></i> 19:00 - 22:00</p>
-                                <p class="event-location"><i class="fas fa-map-marker-alt"></i> Clubhuis, Pol Dhondtstraat 70</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="calendar-card-modern">
-                        <div class="calendar-date-modern">
-                            <span class="date-day-modern">21</span>
-                            <span class="date-month-modern">DEC</span>
-                        </div>
-                        <div class="calendar-content-modern">
-                            <div class="event-type-badge match">Wedstrijd</div>
-                            <h3>Wedstrijd U8</h3>
-                            <div class="event-details">
-                                <p class="event-time"><i class="fas fa-clock"></i> 11:00 - 12:00</p>
-                                <p class="event-location"><i class="fas fa-home"></i> Thuis - Pol Dhondtstraat 70, 8380 Lissewege</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="calendar-card-modern">
-                        <div class="calendar-date-modern">
-                            <span class="date-day-modern">28</span>
-                            <span class="date-month-modern">DEC</span>
-                        </div>
-                        <div class="calendar-content-modern">
-                            <div class="event-type-badge training">Training</div>
-                            <h3>Training Alle Teams</h3>
-                            <div class="event-details">
-                                <p class="event-time"><i class="fas fa-clock"></i> 18:00 - 19:30</p>
-                                <p class="event-location"><i class="fas fa-map-marker-alt"></i> Pol Dhondtstraat 70, 8380 Lissewege</p>
-                            </div>
-                        </div>
-                    </div>
+                <p style="text-align: center; color: var(--text-light); margin-bottom: 2rem; font-size: 0.9rem;">
+                    Seizoen 2025/2026 - 4e Provinciale C West-Vlaanderen
+                </p>
+                <div class="calendar-grid-modern" id="upcomingMatchesGrid">
+                    <!-- Will be populated by JavaScript -->
                 </div>
             </div>
         </div>
@@ -1437,8 +1422,16 @@
 
     <script src="scripts/particles.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/football-api-real.js"></script>
+    <script src="scripts/api-config.js"></script>
+    <script src="scripts/real-matches-data.js"></script>
+    <script src="scripts/team-logos.js"></script>
     <script src="scripts/football-api.js"></script>
     <script src="scripts/standings.js"></script>
+    <script src="scripts/calendar.js"></script>
+    <script src="scripts/players-data.js"></script>
+    <script src="scripts/players.js"></script>
+    <script src="scripts/team-logos-fetcher.js"></script>
 </body>
 </html>
 
