Rediseño completo de sección de precios con nuevo layout moderno

--- a/index.html
+++ b/index.html
@@ -847,132 +847,206 @@
     <!-- Prijslijst Page -->
     <section id="prijslijst" class="page-section section pricing-section">
         <div class="container">
-            <div class="section-header">
-                <span class="section-tag">Prijslijst</span>
-                <h2 class="section-title">Lidmaatschap & Producten</h2>
-                <p class="section-description">Het nieuwe voetbalseizoen staat voor de deur. Vernieuw je lidmaatschap nu!</p>
+            <!-- New Header Design -->
+            <div class="pricing-hero">
+                <div class="pricing-hero-content">
+                    <span class="pricing-hero-badge">Prijslijst</span>
+                    <h1 class="pricing-hero-title">Lidmaatschap & Producten</h1>
+                    <p class="pricing-hero-description">Het nieuwe voetbalseizoen staat voor de deur. Vernieuw je lidmaatschap nu en geniet van alle voordelen!</p>
+                </div>
             </div>
-            <div class="pricing-staggered">
-                <div class="pricing-card">
-                    <div class="pricing-header">
-                        <h3>Jeugdlidmaatschap</h3>
-                        <div class="pricing-price">
-                            <span class="price-amount">€200</span>
-                            <span class="price-period">per seizoen</span>
+
+            <!-- Membership Section -->
+            <div class="membership-section">
+                <div class="membership-card">
+                    <div class="membership-header">
+                        <div class="membership-badge">
+                            <i class="fas fa-crown"></i>
+                            <span>Meest Gekozen</span>
+                        </div>
+                        <div class="membership-icon-wrapper">
+                            <div class="membership-icon">
+                                <i class="fas fa-users"></i>
+                            </div>
+                        </div>
+                        <h2 class="membership-title">Jeugdlidmaatschap</h2>
+                        <div class="membership-price-wrapper">
+                            <span class="membership-price">€200</span>
+                            <span class="membership-period">per seizoen</span>
                         </div>
                     </div>
-                    <div class="pricing-body">
-                        <ul class="pricing-features">
-                            <li><i class="fas fa-check"></i> Toegang tot alle trainingen</li>
-                            <li><i class="fas fa-check"></i> Deelname aan wedstrijden</li>
-                            <li><i class="fas fa-check"></i> Verzekering</li>
-                            <li><i class="fas fa-check"></i> Wedstrijdshirt (bruikleen)</li>
-                            <li><i class="fas fa-check"></i> Verschillende activiteiten</li>
-                        </ul>
-                        <a href="#contact" class="btn-new btn-new-block btn-new-accent">
-                            <span>Word Lid</span>
-                            <i class="fas fa-user-plus"></i>
+                    <div class="membership-body">
+                        <p class="membership-intro">Word lid van R.F.C. Lissewege en maak deel uit van onze voetbalfamilie!</p>
+                        <div class="membership-benefits">
+                            <div class="benefit-item">
+                                <div class="benefit-icon">
+                                    <i class="fas fa-check"></i>
+                                </div>
+                                <div class="benefit-content">
+                                    <h4>Toegang tot alle trainingen</h4>
+                                    <p>Train regelmatig met ervaren coaches</p>
+                                </div>
+                            </div>
+                            <div class="benefit-item">
+                                <div class="benefit-icon">
+                                    <i class="fas fa-check"></i>
+                                </div>
+                                <div class="benefit-content">
+                                    <h4>Deelname aan wedstrijden</h4>
+                                    <p>Speel competitieve wedstrijden</p>
+                                </div>
+                            </div>
+                            <div class="benefit-item">
+                                <div class="benefit-icon">
+                                    <i class="fas fa-check"></i>
+                                </div>
+                                <div class="benefit-content">
+                                    <h4>Verzekering inbegrepen</h4>
+                                    <p>Volledige dekking tijdens activiteiten</p>
+                                </div>
+                            </div>
+                            <div class="benefit-item">
+                                <div class="benefit-icon">
+                                    <i class="fas fa-check"></i>
+                                </div>
+                                <div class="benefit-content">
+                                    <h4>Wedstrijdshirt (bruikleen)</h4>
+                                    <p>Professioneel shirt beschikbaar</p>
+                                </div>
+                            </div>
+                            <div class="benefit-item">
+                                <div class="benefit-icon">
+                                    <i class="fas fa-check"></i>
+                                </div>
+                                <div class="benefit-content">
+                                    <h4>Verschillende activiteiten</h4>
+                                    <p>Meer dan alleen voetbal</p>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="#contact" class="membership-cta">
+                            <span>Word Nu Lid</span>
+                            <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
                 </div>
-                <div class="pricing-card">
-                    <div class="pricing-header">
-                        <h3>Trainingspak</h3>
-                        <div class="pricing-price">
-                            <span class="price-amount">Op aanvraag</span>
-                        </div>
-                    </div>
-                    <div class="pricing-body">
-                        <p class="pricing-description">Een trainingspak is een comfortabel en sportief kledingstuk dat bestaat uit een trainingsjasje en een bijpassende trainingsbroek.</p>
-                        <ul class="pricing-features">
-                            <li><i class="fas fa-check"></i> Clublogo</li>
-                            <li><i class="fas fa-check"></i> Hoge kwaliteit</li>
-                            <li><i class="fas fa-check"></i> Verschillende maten</li>
-                        </ul>
-                        <a href="#contact" class="btn-new btn-new-block btn-new-outline">
-                            <span>Vraag Aan</span>
-                            <i class="fas fa-envelope"></i>
-                        </a>
-                    </div>
+            </div>
+
+            <!-- Products Section -->
+            <div class="products-section">
+                <div class="products-header">
+                    <h2 class="products-title">Club Producten</h2>
+                    <p class="products-subtitle">Ontdek onze exclusieve clubproducten</p>
                 </div>
-                <div class="pricing-card">
-                    <div class="pricing-header">
-                        <h3>Wedstrijdshirt</h3>
-                        <div class="pricing-price">
-                            <span class="price-amount">Bruikleen</span>
+                <div class="products-grid-new">
+                    <div class="product-item">
+                        <div class="product-visual">
+                            <div class="product-image-placeholder">
+                                <i class="fas fa-tshirt"></i>
+                            </div>
+                            <div class="product-label">Op aanvraag</div>
+                        </div>
+                        <div class="product-info">
+                            <h3 class="product-name">Trainingspak</h3>
+                            <p class="product-desc">Comfortabel en sportief trainingspak met clublogo. Bestaat uit een trainingsjasje en bijpassende trainingsbroek.</p>
+                            <div class="product-tags">
+                                <span class="product-tag"><i class="fas fa-check"></i> Clublogo</span>
+                                <span class="product-tag"><i class="fas fa-check"></i> Hoge kwaliteit</span>
+                                <span class="product-tag"><i class="fas fa-check"></i> Verschillende maten</span>
+                            </div>
+                            <a href="#contact" class="product-action">
+                                <span>Vraag Aan</span>
+                                <i class="fas fa-arrow-right"></i>
+                            </a>
                         </div>
                     </div>
-                    <div class="pricing-body">
-                        <p class="pricing-description">Het wedstrijdshirt was het symbool van trots en teamgeest tijdens elke wedstrijd. Beschikbaar via bruikleen bij lidmaatschap.</p>
-                        <ul class="pricing-features">
-                            <li><i class="fas fa-check"></i> Beschikbaar via bruikleen</li>
-                            <li><i class="fas fa-check"></i> Professionele kwaliteit</li>
-                            <li><i class="fas fa-check"></i> Clublogo</li>
-                        </ul>
-                        <a href="#contact" class="btn-new btn-new-block btn-new-outline">
-                            <span>Meer Info</span>
-                            <i class="fas fa-info-circle"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="pricing-card">
-                    <div class="pricing-header">
-                        <h3>Voetbalschoenen</h3>
-                        <div class="pricing-price">
-                            <span class="price-amount">Zelf aankopen</span>
+
+                    <div class="product-item featured-product">
+                        <div class="product-visual">
+                            <div class="product-image-placeholder">
+                                <i class="fas fa-futbol"></i>
+                            </div>
+                            <div class="product-label highlight-label">Bruikleen</div>
+                        </div>
+                        <div class="product-info">
+                            <h3 class="product-name">Wedstrijdshirt</h3>
+                            <p class="product-desc">Het symbool van trots en teamgeest tijdens elke wedstrijd. Beschikbaar via bruikleen bij lidmaatschap.</p>
+                            <div class="product-tags">
+                                <span class="product-tag"><i class="fas fa-check"></i> Beschikbaar via bruikleen</span>
+                                <span class="product-tag"><i class="fas fa-check"></i> Professionele kwaliteit</span>
+                                <span class="product-tag"><i class="fas fa-check"></i> Clublogo</span>
+                            </div>
+                            <a href="#contact" class="product-action">
+                                <span>Meer Info</span>
+                                <i class="fas fa-arrow-right"></i>
+                            </a>
                         </div>
                     </div>
-                    <div class="pricing-body">
-                        <p class="pricing-description">De nieuwe voetbalschoenen zijn niet alleen stijlvol, maar bieden ook optimale grip en ondersteuning op het veld.</p>
-                        <ul class="pricing-features">
-                            <li><i class="fas fa-info-circle"></i> Zelf aankopen</li>
-                            <li><i class="fas fa-check"></i> Optimale grip</li>
-                            <li><i class="fas fa-check"></i> Verschillende merken</li>
-                        </ul>
-                        <a href="#contact" class="btn-new btn-new-block btn-new-outline">
-                            <span>Advies</span>
-                            <i class="fas fa-comments"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="pricing-card">
-                    <div class="pricing-header">
-                        <h3>Clubtas</h3>
-                        <div class="pricing-price">
-                            <span class="price-amount">Op aanvraag</span>
+
+                    <div class="product-item">
+                        <div class="product-visual">
+                            <div class="product-image-placeholder">
+                                <i class="fas fa-shoe-prints"></i>
+                            </div>
+                            <div class="product-label">Zelf aankopen</div>
+                        </div>
+                        <div class="product-info">
+                            <h3 class="product-name">Voetbalschoenen</h3>
+                            <p class="product-desc">Stijlvol en functioneel. Bieden optimale grip en ondersteuning op het veld voor betere prestaties.</p>
+                            <div class="product-tags">
+                                <span class="product-tag"><i class="fas fa-info-circle"></i> Zelf aankopen</span>
+                                <span class="product-tag"><i class="fas fa-check"></i> Optimale grip</span>
+                                <span class="product-tag"><i class="fas fa-check"></i> Verschillende merken</span>
+                            </div>
+                            <a href="#contact" class="product-action">
+                                <span>Advies</span>
+                                <i class="fas fa-arrow-right"></i>
+                            </a>
                         </div>
                     </div>
-                    <div class="pricing-body">
-                        <p class="pricing-description">Clubtas is een handige en veelzijdige tas voor sportclubs en verenigingen om hun spullen georganiseerd en makkelijk mee te nemen.</p>
-                        <ul class="pricing-features">
-                            <li><i class="fas fa-check"></i> Clublogo</li>
-                            <li><i class="fas fa-check"></i> Ruime capaciteit</li>
-                            <li><i class="fas fa-check"></i> Hoge kwaliteit</li>
-                        </ul>
-                        <a href="#contact" class="btn-new btn-new-block btn-new-outline">
-                            <span>Vraag Aan</span>
-                            <i class="fas fa-envelope"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="pricing-card">
-                    <div class="pricing-header">
-                        <h3>Trainingssokken</h3>
-                        <div class="pricing-price">
-                            <span class="price-amount">Op aanvraag</span>
+
+                    <div class="product-item">
+                        <div class="product-visual">
+                            <div class="product-image-placeholder">
+                                <i class="fas fa-briefcase"></i>
+                            </div>
+                            <div class="product-label">Op aanvraag</div>
+                        </div>
+                        <div class="product-info">
+                            <h3 class="product-name">Clubtas</h3>
+                            <p class="product-desc">Handige en veelzijdige tas voor sportclubs. Perfect om al je spullen georganiseerd en makkelijk mee te nemen.</p>
+                            <div class="product-tags">
+                                <span class="product-tag"><i class="fas fa-check"></i> Clublogo</span>
+                                <span class="product-tag"><i class="fas fa-check"></i> Ruime capaciteit</span>
+                                <span class="product-tag"><i class="fas fa-check"></i> Hoge kwaliteit</span>
+                            </div>
+                            <a href="#contact" class="product-action">
+                                <span>Vraag Aan</span>
+                                <i class="fas fa-arrow-right"></i>
+                            </a>
                         </div>
                     </div>
-                    <div class="pricing-body">
-                        <p class="pricing-description">Trainingssokken zijn speciaal ontworpen voor optimale ondersteuning en comfort tijdens het sporten.</p>
-                        <ul class="pricing-features">
-                            <li><i class="fas fa-check"></i> Clublogo</li>
-                            <li><i class="fas fa-check"></i> Comfortabel</li>
-                            <li><i class="fas fa-check"></i> Verschillende maten</li>
-                        </ul>
-                        <a href="#contact" class="btn-new btn-new-block btn-new-outline">
-                            <span>Vraag Aan</span>
-                            <i class="fas fa-envelope"></i>
-                        </a>
+
+                    <div class="product-item">
+                        <div class="product-visual">
+                            <div class="product-image-placeholder">
+                                <i class="fas fa-socks"></i>
+                            </div>
+                            <div class="product-label">Op aanvraag</div>
+                        </div>
+                        <div class="product-info">
+                            <h3 class="product-name">Trainingssokken</h3>
+                            <p class="product-desc">Speciaal ontworpen voor optimale ondersteuning en comfort tijdens het sporten. Verschillende maten beschikbaar.</p>
+                            <div class="product-tags">
+                                <span class="product-tag"><i class="fas fa-check"></i> Clublogo</span>
+                                <span class="product-tag"><i class="fas fa-check"></i> Comfortabel</span>
+                                <span class="product-tag"><i class="fas fa-check"></i> Verschillende maten</span>
+                            </div>
+                            <a href="#contact" class="product-action">
+                                <span>Vraag Aan</span>
+                                <i class="fas fa-arrow-right"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
