Mejoras de responsividad y correcciÃ³n de errores CORS - secciones competencias, rivales y miembros optimizadas para mÃ³viles

--- a/index.html
+++ b/index.html
@@ -1614,7 +1614,7 @@
         </section>
 
         <!-- Rivals Page -->
-        <section id="rivalen" class="page-section section rivals-section">
+        <section id="rivalen" class="page-section section rivals-section" style="display: none;">
             <div class="rivals-container">
                 <div class="section-header">
                     <span class="section-tag">Rivalen</span>
@@ -1635,7 +1635,7 @@
         </section>
 
         <!-- Members Page -->
-        <section id="members" class="page-section section members-section">
+        <section id="members" class="page-section section members-section" style="display: none;">
             <div class="members-container">
                 <div class="members-header">
                     <h2>Leden Zone</h2>
