Agregado display none inicial a secciÃ³n competities

--- a/index.html
+++ b/index.html
@@ -1546,7 +1546,7 @@
         </section>
 
         <!-- Competitions Page -->
-        <section id="competities" class="page-section section competitions-section">
+        <section id="competities" class="page-section section competitions-section" style="display: none;">
             <div class="competitions-container">
                 <div class="competition-header">
                     <span class="competition-badge">Competities</span>
