Volledige Nederlandse vertaling van alle teksten en documentatie - verbeteringen document bijgewerkt

--- a/index.html
+++ b/index.html
@@ -1672,13 +1672,13 @@
                                     <i class="fas fa-user"></i>
                                 </div>
                                 <div class="member-details">
-                                    <h3 class="member-name">Miembro RFC Lissewege</h3>
-                                    <p class="member-role">Miembro</p>
+                                    <h3 class="member-name">Lid RFC Lissewege</h3>
+                                    <p class="member-role">Lid</p>
                                 </div>
                             </div>
                             <button class="btn-logout" id="membersLogoutBtn">
                                 <i class="fas fa-sign-out-alt"></i>
-                                Cerrar Sesión
+                                Uitloggen
                             </button>
                         </div>
                     </div>
